# pendant2021

./: .gitignore  CMakeLists.txt  README.md  bootloader.cpp  bq25895.cpp  bq25895.h  build.sh  color.cpp  color.h  descriptors.c  effects.cpp  effects.h  ens210.cpp  ens210.h  fastmath.h  gcc_arm_128k_bootloaded.ld  gcc_arm_128k_bootloader.ld  gcc_arm_128k_vscode.ld  i2cmanager.cpp  i2cmanager.h  input.cpp  input.h  leds.cpp  leds.h  main.c  main.h  model.cpp  model.h  msc.c  msc.cpp  msc.h  pendant.cpp  sdcard.cpp  sdcard.h  sdd1306.cpp  sdd1306.h  seed.cpp  stm32wl.cpp  stm32wl.h  timeline.cpp  (+2 more)
fatfs/: diskio.h
mainmcu/: CMakeLists.txt  main.c  main.h  pendant.cpp  pendant.h  vector.h
